# logs_aggregator

./: .gitignore  CMakeLists.txt  README.md  balansers.cpp  balansers.h  exceptions.h  helpers.cpp  helpers.h  input_log_file_handler.cpp  input_log_file_handler.h  main.cpp
src/: balancers.cpp  balancers.h  handlers.cpp  handlers.h  logfile_splitter.cpp  logfile_splitter.h  utils.cpp  utils.h
tests/: test_corner_case.py  test_degenerate_case.py  test_several_input_files.py  utils.py
